@startuml proyecto_juego


class Raza {
    - descripcion: String
}

class Humano {
    + determinacion(): Void
}

class NiñoBosque {
    + magiaNatural(): Void
}

class Gigante {
    + fuerzaBruta(): Void
}

class Clase {
    - descripcion: String
    - daño: Float
    - armadura: Float
    - vida: Float
}

class Arquero {
    + tiroCertero(): Void
}

class Guerrero {
    + golpeHelado(): Void
}

class MagoFuego {
    - mana: Float
    + fuegoDragon(): Void
}

class Item {
    - nombre: String
    - tipo: String
    - efecto: String 
    + aplicar(personaje: Personaje): Void
}

class Personaje {
    - nombre: String
    - vida: Float
    - daño: Float
    - armadura: Float
    - nivel: Integer
    + atacar(): Void 
    + recibirDaño(): Float
    + defender(): Void
    + usarItem(item: Item): Void
    + usarHabilidadEspecial(): Void
}

class Protagonista {
    - experiencia: Float
    + ganarExperiencia(): void
    + subirNivel(): Void

}

class Enemigo {
    - esJefe: Boolean
    - recompensaExp: Float
    - drop: List<Item>
}

class Lugar {
    - nombre: String
    - descripcion: String
    - enemigos: List<Enemigo>
    - jefe: Enemigo
    + resolverMazmorra(): Void
}

class Juego {
    + personajes: List<Protagonista>
    + lugares: List<Lugar>
    + iniciarBatalla(): Void
    + avanzarLugar(): Void
    + guardarPartida(): Void
    + cargarPartida(): Void
}


Personaje <|-- Protagonista
Personaje <|-- Enemigo
Personaje "1" -- "1" Raza
Personaje "1" -- "1" Clase

Clase <|-- Arquero
Clase <|-- Guerrero
Clase <|-- MagoFuego
Raza <|-- Humano
Raza <|-- NiñoBosque
Raza <|-- Gigante

Juego *-- Protagonista
Juego *-- Lugar

Item "0..*" --  "0..*" Protagonista
Item "0..*" -- "0..*" Enemigo
Lugar *-- Enemigo

